# monokrom

./: .gitignore  README.md  build_deb.sh  pyproject.toml  setup.py
Supporting Collateral/SheetCAM/: LinuxCNC Monokrom.scpost
Supporting Collateral/TestFiles/: holesize_test_v2.ngc  holesize_test_v3.ngc  holesize_test_v3_parsed.ngc  metric_circles.ngc  metric_circles_with_G10L2.ngc  metric_sqaure_G10L2.ngc  monokrom-generic.ngc  multi_g5x_squares.ngc  multi_offset.ngc  multi_part.ngc  params_test.ngc  plasmac-generic.ngc  qtplasmac-con.ngc  single_circle.ngc  turboss_test1.ngc
TestFiles/: holesize_test_v2.ngc
debian/: changelog  control  postinst  rules
docs/: estop_UI_sourced.dot  estop_external_chain.dot  plasmac_state_mapping.dot  qtplasmac_hal_map.txt
linuxcnc/configs/sim.monokrom/plasmac/: custom_config.yml  estop.halshow  estop_internal.halshow  gcode_syntax.yml  machine.tcl  master-seed-source.csv  plasma_table.db  plasma_table.db.bak  plasmac.tcl  plasmac_gcode.py  postgui.hal  postgui_call_list.hal  postgui_sim.hal  qtplasmac_sim.qss  testfn1.ngc  tool.tbl  xhc-whb04b-6.hal  xyz.ini
linuxcnc/configs/sim.monokrom/plasmac/original/: machine.tcl  xyz.ini
linuxcnc/configs/sim.monokrom/plasmac/original-v2/: custom_config.yml  machine.tcl  plasma_table.db  postgui.hal  qtplasmac_connections.hal  qtplasmac_sim.qss  xyz.ini
linuxcnc/configs/sim.monokrom/plasmac/user_buttons/: laser_off.ngc  park.ngc  single_cut.ngc  testfn2.ngc
monokrom/: __init__.py
monokrom/common/: monokrom.qss
monokrom/common/sass/: _base.scss
monokrom/common/sass/widgets/: _qcombobox.scss  _qlistview.scss  _qpushbutton.scss  _qspinbox.scss  _qtabbar.scss
monokrom/common/widgets/: __init__.py  file_chooser.ui  file_list_view.py  mk_led_hal.py  mk_push_button.py  recent_file_list_view.py
monokrom/common/widgets/mk_dro/: mk_dro.py
monokrom/plasma/: config.yml  mainwindow.py  mainwindow.ui
monokrom/plasma/widgets/: __init__.py  cyclestart_action_button.py  estop_action_button.py  estop_button.py  plasma_hal_checkbox.py  plasma_hal_double_spinbox.py  plasma_hal_spinbox.py
src/monokrom/: __init__.py
src/monokrom/common/: monokrom.qss
src/monokrom/common/sass/: _vcp_layout.scss  build-yellow-plasma.sh
src/monokrom/common/sass/widgets/: _qabstractitemview.scss  _qcheckbox.scss  _qcombobox.scss  _qpushbutton.scss  _qspinbox.scss  _qtableview.scss
src/monokrom/common/widgets/: __init__.py  file_chooser.ui  file_list_view.py  group_box.py  input_overlay.py  int_entry.ui  mdi_entry.py  mk_led.py  mk_led_hal.py  mk_line_edit.py  mk_push_button.py  recent_file_list_view.py  tab_widget.py  transparent_widget.py
src/monokrom/common/widgets/mk_dro/: mk_dro.py  mk_dro.ui
src/monokrom/mill/widgets/: __init__.py
src/monokrom/plasma/: config.yml  mainwindow-1024-768.ui  mainwindow-less-greedy.ui  mainwindow.py  mainwindow.ui  monokrom.qrc  quickshapes.py
src/monokrom/plasma/sass/: plasma.scss
src/monokrom/plasma/widgets/: __init__.py  cyclestart_action_button.py  new_process.ui  plasma_add_process.py  plasma_hal_checkbox.py  plasma_hal_double_spinbox.py  plasma_hal_spinbox.py  plasma_line_edit.py  plasma_push_button.py
