[build-system]
requires = ["poetry-core", "versioneer[toml]"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "monokrom"
authors = [
  "Kurt Jacobson <kcjengr@gmail.com>",
  "Joco <james@snaggingpixels.com>",
]
description = "Monochrome style VCPs for LinuxCNC controlled Plasma cutters."
readme = "README.md"
version = "0.0"

packages = [
    { include = "monokrom", from = "src" },
    { include = "common", from = "src/monokrom" },
    { include = "mill", from = "src/monokrom" },
    { include = "plasma", from = "src/monokrom" },
]

[tool.poetry.dependencies]
python = "^3.7"


[tool.poetry.scripts]
# monokrom = "monokrom:main"
monokrom_plasma = "monokrom.plasma:main"
monokrom_mill = "monokrom.mill:main"

[tool.poetry.plugins]

[tool.poetry.plugins."qtpyvcp.vcp"]
# monokrom = "monokrom"
monokrom_plasma = "monokrom.plasma"
monokrom_mill = "monokrom.mill"

[tool.poetry.plugins."qtpyvcp.widgets"]
monokrom_common_widgets = "monokrom.common.widgets"
monokrom_plasma_widgets = "monokrom.plasma.widgets"
monokrom_mill_widgets = "monokrom.mill.widgets"


# [tool.versioneer]
# VCS = "git"
# style = "pep440"
# versionfile_source = "src/monokrom/_version.py"
# versionfile_build = "src/monokrom/_version.py"
# tag_prefix = ""
# parentdir_prefix = ""
